// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TextInputV2 > should render correctly when input  has a error sentiment 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-3 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.emotion-3 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 3rem;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-5>.emotion-8 {
  color: #3f4250;
}

.emotion-5>.emotion-8::-webkit-input-placeholder {
  color: #727683;
}

.emotion-5>.emotion-8::-moz-placeholder {
  color: #727683;
}

.emotion-5>.emotion-8:-ms-input-placeholder {
  color: #727683;
}

.emotion-5>.emotion-8::placeholder {
  color: #727683;
}

.emotion-5[data-success='true'] {
  border-color: #22674e;
}

.emotion-5[data-error='true'] {
  border-color: #b3144d;
}

.emotion-5[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.emotion-5[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-5[data-disabled='true']>.emotion-8 {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-8::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-8::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-8:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-8::placeholder {
  color: #b5b7bd;
}

.emotion-5:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 3rem;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-5>.emotion-8 {
  color: #3f4250;
}

.emotion-5>.emotion-8::-webkit-input-placeholder {
  color: #727683;
}

.emotion-5>.emotion-8::-moz-placeholder {
  color: #727683;
}

.emotion-5>.emotion-8:-ms-input-placeholder {
  color: #727683;
}

.emotion-5>.emotion-8::placeholder {
  color: #727683;
}

.emotion-5[data-success='true'] {
  border-color: #22674e;
}

.emotion-5[data-error='true'] {
  border-color: #b3144d;
}

.emotion-5[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.emotion-5[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-5[data-disabled='true']>.emotion-8 {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-8::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-8::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-8:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-8::placeholder {
  color: #b5b7bd;
}

.emotion-5:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  width: 100%;
  padding-left: 1rem;
  background: transparent;
  font-size: 0.875rem;
}

.emotion-7[data-size='large'] {
  font-size: 1rem;
}

.emotion-7[data-size='small'] {
  padding-left: 0.5rem;
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  width: 100%;
  padding-left: 1rem;
  background: transparent;
  font-size: 0.875rem;
}

.emotion-7[data-size='large'] {
  font-size: 1rem;
}

.emotion-7[data-size='small'] {
  padding-left: 0.5rem;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding: 0 1rem;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding: 0 1rem;
}

.emotion-11 {
  vertical-align: middle;
  fill: #b3144d;
  height: 1rem;
  width: 1rem;
  min-width: 1rem;
  min-height: 1rem;
}

.emotion-11 .fillStroke {
  stroke: #b3144d;
  fill: none;
}

.emotion-13 {
  color: #b3144d;
  font-size: 0.75rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <label
        class="emotion-2 emotion-3 emotion-4"
        for=":rk:"
      >
        Test
      </label>
      <div>
        <div
          class="emotion-5 emotion-6"
          data-disabled="false"
          data-error="true"
          data-readonly="false"
          data-success="false"
        >
          <input
            aria-invalid="true"
            class="emotion-7 emotion-8"
            data-size="large"
            id=":rk:"
            type="text"
            value="test"
          />
          <div
            class="emotion-9 emotion-10"
          >
            <svg
              class="emotion-11 emotion-12"
              viewBox="0 0 20 20"
            >
              <path
                clip-rule="evenodd"
                d="M18 10C18 14.4183 14.4183 18 10 18C5.58172 18 2 14.4183 2 10C2 5.58172 5.58172 2 10 2C14.4183 2 18 5.58172 18 10ZM10 5C10.4142 5 10.75 5.33579 10.75 5.75V10.25C10.75 10.6642 10.4142 11 10 11C9.58579 11 9.25 10.6642 9.25 10.25V5.75C9.25 5.33579 9.58579 5 10 5ZM10 15C10.5523 15 11 14.5523 11 14C11 13.4477 10.5523 13 10 13C9.44771 13 9 13.4477 9 14C9 14.5523 9.44771 15 10 15Z"
                fill-rule="evenodd"
              />
            </svg>
          </div>
        </div>
      </div>
      <p
        class="emotion-13 emotion-4"
      >
        success
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextInputV2 > should render correctly when input has a success sentiment 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-3 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.emotion-3 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 3rem;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-5>.emotion-8 {
  color: #3f4250;
}

.emotion-5>.emotion-8::-webkit-input-placeholder {
  color: #727683;
}

.emotion-5>.emotion-8::-moz-placeholder {
  color: #727683;
}

.emotion-5>.emotion-8:-ms-input-placeholder {
  color: #727683;
}

.emotion-5>.emotion-8::placeholder {
  color: #727683;
}

.emotion-5[data-success='true'] {
  border-color: #22674e;
}

.emotion-5[data-error='true'] {
  border-color: #b3144d;
}

.emotion-5[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.emotion-5[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-5[data-disabled='true']>.emotion-8 {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-8::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-8::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-8:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-8::placeholder {
  color: #b5b7bd;
}

.emotion-5:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 3rem;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-5>.emotion-8 {
  color: #3f4250;
}

.emotion-5>.emotion-8::-webkit-input-placeholder {
  color: #727683;
}

.emotion-5>.emotion-8::-moz-placeholder {
  color: #727683;
}

.emotion-5>.emotion-8:-ms-input-placeholder {
  color: #727683;
}

.emotion-5>.emotion-8::placeholder {
  color: #727683;
}

.emotion-5[data-success='true'] {
  border-color: #22674e;
}

.emotion-5[data-error='true'] {
  border-color: #b3144d;
}

.emotion-5[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.emotion-5[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-5[data-disabled='true']>.emotion-8 {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-8::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-8::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-8:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-8::placeholder {
  color: #b5b7bd;
}

.emotion-5:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  width: 100%;
  padding-left: 1rem;
  background: transparent;
  font-size: 0.875rem;
}

.emotion-7[data-size='large'] {
  font-size: 1rem;
}

.emotion-7[data-size='small'] {
  padding-left: 0.5rem;
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  width: 100%;
  padding-left: 1rem;
  background: transparent;
  font-size: 0.875rem;
}

.emotion-7[data-size='large'] {
  font-size: 1rem;
}

.emotion-7[data-size='small'] {
  padding-left: 0.5rem;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding: 0 1rem;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding: 0 1rem;
}

.emotion-11 {
  vertical-align: middle;
  fill: #22674e;
  height: 1rem;
  width: 1rem;
  min-width: 1rem;
  min-height: 1rem;
}

.emotion-11 .fillStroke {
  stroke: #22674e;
  fill: none;
}

.emotion-13 {
  color: #22674e;
  font-size: 0.75rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <label
        class="emotion-2 emotion-3 emotion-4"
        for=":rg:"
      >
        Test
      </label>
      <div>
        <div
          class="emotion-5 emotion-6"
          data-disabled="false"
          data-error="false"
          data-readonly="false"
          data-success="true"
        >
          <input
            aria-invalid="false"
            class="emotion-7 emotion-8"
            data-size="large"
            id=":rg:"
            type="text"
            value="test"
          />
          <div
            class="emotion-9 emotion-10"
          >
            <svg
              class="emotion-11 emotion-12"
              viewBox="0 0 20 20"
            >
              <path
                clip-rule="evenodd"
                d="M10 18C14.4183 18 18 14.4183 18 10C18 5.58172 14.4183 2 10 2C5.58172 2 2 5.58172 2 10C2 14.4183 5.58172 18 10 18ZM13.8566 8.19113C14.1002 7.85614 14.0261 7.38708 13.6911 7.14345C13.3561 6.89982 12.8871 6.97388 12.6434 7.30887L9.15969 12.099L7.28033 10.2197C6.98744 9.92678 6.51256 9.92678 6.21967 10.2197C5.92678 10.5126 5.92678 10.9874 6.21967 11.2803L8.71967 13.7803C8.87477 13.9354 9.08999 14.0149 9.30867 13.9977C9.52734 13.9805 9.72754 13.8685 9.85655 13.6911L13.8566 8.19113Z"
                fill-rule="evenodd"
              />
            </svg>
          </div>
        </div>
      </div>
      <p
        class="emotion-13 emotion-4"
      >
        success
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextInputV2 > should render correctly when input is disabled 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-3 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.emotion-3 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 3rem;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-5>.emotion-8 {
  color: #3f4250;
}

.emotion-5>.emotion-8::-webkit-input-placeholder {
  color: #727683;
}

.emotion-5>.emotion-8::-moz-placeholder {
  color: #727683;
}

.emotion-5>.emotion-8:-ms-input-placeholder {
  color: #727683;
}

.emotion-5>.emotion-8::placeholder {
  color: #727683;
}

.emotion-5[data-success='true'] {
  border-color: #22674e;
}

.emotion-5[data-error='true'] {
  border-color: #b3144d;
}

.emotion-5[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.emotion-5[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-5[data-disabled='true']>.emotion-8 {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-8::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-8::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-8:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-8::placeholder {
  color: #b5b7bd;
}

.emotion-5:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 3rem;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-5>.emotion-8 {
  color: #3f4250;
}

.emotion-5>.emotion-8::-webkit-input-placeholder {
  color: #727683;
}

.emotion-5>.emotion-8::-moz-placeholder {
  color: #727683;
}

.emotion-5>.emotion-8:-ms-input-placeholder {
  color: #727683;
}

.emotion-5>.emotion-8::placeholder {
  color: #727683;
}

.emotion-5[data-success='true'] {
  border-color: #22674e;
}

.emotion-5[data-error='true'] {
  border-color: #b3144d;
}

.emotion-5[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.emotion-5[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-5[data-disabled='true']>.emotion-8 {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-8::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-8::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-8:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-8::placeholder {
  color: #b5b7bd;
}

.emotion-5:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  width: 100%;
  padding-left: 1rem;
  background: transparent;
  font-size: 0.875rem;
}

.emotion-7[data-size='large'] {
  font-size: 1rem;
}

.emotion-7[data-size='small'] {
  padding-left: 0.5rem;
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  width: 100%;
  padding-left: 1rem;
  background: transparent;
  font-size: 0.875rem;
}

.emotion-7[data-size='large'] {
  font-size: 1rem;
}

.emotion-7[data-size='small'] {
  padding-left: 0.5rem;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <label
        class="emotion-2 emotion-3 emotion-4"
        for=":ra:"
      >
        Test
      </label>
      <div>
        <div
          class="emotion-5 emotion-6"
          data-disabled="true"
          data-error="false"
          data-readonly="false"
          data-success="false"
        >
          <input
            aria-invalid="false"
            class="emotion-7 emotion-8"
            data-size="large"
            disabled=""
            id=":ra:"
            type="text"
            value="test"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextInputV2 > should render correctly when input is readOnly 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-3 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.emotion-3 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 3rem;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-5>.emotion-8 {
  color: #3f4250;
}

.emotion-5>.emotion-8::-webkit-input-placeholder {
  color: #727683;
}

.emotion-5>.emotion-8::-moz-placeholder {
  color: #727683;
}

.emotion-5>.emotion-8:-ms-input-placeholder {
  color: #727683;
}

.emotion-5>.emotion-8::placeholder {
  color: #727683;
}

.emotion-5[data-success='true'] {
  border-color: #22674e;
}

.emotion-5[data-error='true'] {
  border-color: #b3144d;
}

.emotion-5[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.emotion-5[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-5[data-disabled='true']>.emotion-8 {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-8::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-8::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-8:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-8::placeholder {
  color: #b5b7bd;
}

.emotion-5:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 3rem;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-5>.emotion-8 {
  color: #3f4250;
}

.emotion-5>.emotion-8::-webkit-input-placeholder {
  color: #727683;
}

.emotion-5>.emotion-8::-moz-placeholder {
  color: #727683;
}

.emotion-5>.emotion-8:-ms-input-placeholder {
  color: #727683;
}

.emotion-5>.emotion-8::placeholder {
  color: #727683;
}

.emotion-5[data-success='true'] {
  border-color: #22674e;
}

.emotion-5[data-error='true'] {
  border-color: #b3144d;
}

.emotion-5[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.emotion-5[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-5[data-disabled='true']>.emotion-8 {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-8::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-8::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-8:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-8::placeholder {
  color: #b5b7bd;
}

.emotion-5:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  width: 100%;
  padding-left: 1rem;
  background: transparent;
  font-size: 0.875rem;
}

.emotion-7[data-size='large'] {
  font-size: 1rem;
}

.emotion-7[data-size='small'] {
  padding-left: 0.5rem;
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  width: 100%;
  padding-left: 1rem;
  background: transparent;
  font-size: 0.875rem;
}

.emotion-7[data-size='large'] {
  font-size: 1rem;
}

.emotion-7[data-size='small'] {
  padding-left: 0.5rem;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <label
        class="emotion-2 emotion-3 emotion-4"
        for=":rd:"
      >
        Test
      </label>
      <div>
        <div
          class="emotion-5 emotion-6"
          data-disabled="false"
          data-error="false"
          data-readonly="true"
          data-success="false"
        >
          <input
            aria-invalid="false"
            class="emotion-7 emotion-8"
            data-size="large"
            id=":rd:"
            readonly=""
            type="text"
            value="test"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextInputV2 > should render correctly with basic props 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-3 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 3rem;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-5>.emotion-8 {
  color: #3f4250;
}

.emotion-5>.emotion-8::-webkit-input-placeholder {
  color: #727683;
}

.emotion-5>.emotion-8::-moz-placeholder {
  color: #727683;
}

.emotion-5>.emotion-8:-ms-input-placeholder {
  color: #727683;
}

.emotion-5>.emotion-8::placeholder {
  color: #727683;
}

.emotion-5[data-success='true'] {
  border-color: #22674e;
}

.emotion-5[data-error='true'] {
  border-color: #b3144d;
}

.emotion-5[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.emotion-5[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-5[data-disabled='true']>.emotion-8 {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-8::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-8::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-8:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-8::placeholder {
  color: #b5b7bd;
}

.emotion-5:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  width: 100%;
  padding-left: 1rem;
  background: transparent;
  font-size: 0.875rem;
}

.emotion-7[data-size='large'] {
  font-size: 1rem;
}

.emotion-7[data-size='small'] {
  padding-left: 0.5rem;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <label
        class="emotion-2 emotion-3 emotion-4"
        for=":r0:"
      >
        Test
      </label>
      <div>
        <div
          class="emotion-5 emotion-6"
          data-disabled="false"
          data-error="false"
          data-readonly="false"
          data-success="false"
        >
          <input
            aria-invalid="false"
            class="emotion-7 emotion-8"
            data-size="large"
            id=":r0:"
            type="text"
            value="test"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
